[tool.poetry]
name = "keplermatik_test"
version = "0.1.0"
description = ""
authors = ["mysteriousham <mysteriousham73@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websocket-client = "^1.3.3"
rel = "^0.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
